--- a/src/index.html
+++ b/src/index.html
@@ -112,13 +112,13 @@
     </div>
 
     <!--Bloc Nos Expertises -->
-    <section class="bg-body-tertiary">
+    <section class="bg-body-tertiary ">
       <div class="container text-center">
-        <h2 class="blue-bar-title">Nos expertises</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+        <h2 class="blue-bar-title mt-5 pt-5">Nos expertises</h2>
+        <p class="pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
         ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="row">
+        <div class="row my-5">
           <div class="col">
             <img src="assets/images/illu.png" alt="Image-illu" srcset="">
             <h4>Conseil stratégie digitale</h4>
@@ -144,28 +144,28 @@
             <p><a href="#" class="link-pink">En savoir plus</a></p>
           </div>
         </div>
-        <div class="row">
+        <div class="row py-5">
           <div class="col">
-            <img src="assets/images/illu.png" alt="Image-illu" srcset="">
-            <h4>Conseil stratégie digitale</h4>
+            <img src="assets/images/e-commerce.png" alt="Image-illu" srcset="">
+            <h4>E-commerce</h4>
             <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
             <p><a href="#" class="link-pink">En savoir plus</a></p>
           </div>
           <div class="col">
-            <img src="assets/images/illu-ux.png" alt="Image-illu" srcset="">
-            <h4>UI/UX Design</h4>
+            <img src="assets/images/innovation.png" alt="Image-illu" srcset="">
+            <h4>Innovation</h4>
             <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
             <p><a href="#" class="link-pink">En savoir plus</a></p>
           </div>
           <div class="col">
-            <img src="assets/images/dvt-web.png" alt="Image-illu" srcset="">
-            <h4>Développement web</h4>
+            <img src="assets/images/centre-de-service.png" alt="Image-illu" srcset="">
+            <h4>Centre de service</h4>
             <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
             <p><a href="#" class="link-pink">En savoir plus</a></p>
           </div>
           <div class="col">
-            <img src="assets/images/app-mobile.png" alt="Image-illu" srcset="">
-            <h4>Application mobile</h4>
+            <img src="assets/images/tma.png" alt="Image-illu" srcset="">
+            <h4>TMA</h4>
             <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
             <p><a href="#" class="link-pink">En savoir plus</a></p>
           </div>
@@ -177,7 +177,7 @@
     <!--Bloc Nos Réalisations -->
     <section>
       <div class="container">
-        <h2 class="text-center">Nos réalisations</h2>
+        <h2 class="text-center mt-5 pt-5">Nos réalisations</h2>
         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, .</p>
       </div>
@@ -202,7 +202,7 @@
     <!--Bloc Témoignages -->
     <section class="bg-body-tertiary">
       <div class="container text-center">
-        <h2 class="blue-bar-title">Temoignages</h2>
+        <h2 class="blue-bar-title mt-5 pt-5">Temoignages</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim  consequat.</p>
         <div class="row">
@@ -224,12 +224,12 @@
     <!--Bloc Technologies -->
     <section>
       <div class="container ">
-        <h2 class="text-center">Les meilleures technologies</h2>
+        <h2 class="text-center mt-5 pt-5">Les meilleures technologies</h2>
         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
         ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="logos-technos text-center">
+      <div class="logos-technos text-center my-5">
         <div class="row">
           <div class="col">
             <img src="assets/images/symfony%201.png" alt="Logo Symfony" srcset="">
@@ -248,37 +248,58 @@
             <p>VueJS</p>
           </div>
         </div>
-        <p><a href="#" class="btn link-pink"><strong>Voir toutes les technologies</strong></a></p>
+        <p class="my-5 pb-5"><a href="#" class="btn link-pink"><strong>Voir toutes les technologies</strong></a></p>
       </div>
     </section>
     <!--End Bloc Technologies -->
 
 
     <!--Bloc Article de blog d'ACSEO -->
-    <section class="bg-body-tertiary">
+    <section class="bg-body-tertiary pb-5">
       <div class="container ">
-        <h2 class="text-center">Le blog d'ACSEO</h2>
+        <h2 class="text-center mt-5 pt-5">Le blog d'ACSEO</h2>
         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
         ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="row">
+        <div class="row row-cols-1 row-cols-md-3 g-4 my-5">
           <div class="col">
-            <img src="assets/images/img-bloc-1.png" alt="Image-blog" srcset="">
-            <h4>Débugger un projet PHP Symfony en 2021</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#">En savoir plus</a></p>
+            <div class="card h-100">
+              <img src="assets/images/img-bloc-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Débugger un projet PHP Symfony en 2021</h5>
+                <p class="card-text my-3">Si debugger, c’est supprimer des bugs, alors programmer ne peut être (...)</p>
+                <div class="blog">
+                  <span class="text-secondary">Le 15/01/2022</span>
+                  <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col">
-            <img src="assets/images/img-blog-2.png" alt="Image-blog" srcset="">
-            <h4>Débugger un projet PHP Symfony en 2021</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#">En savoir plus</a></p>
+            <div class="card h-100">
+              <img src="assets/images/img-blog-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">ACSEO finalise l'Audit de 3 applications Symfony</h5>
+                <p class="card-text my-3">C'est l'été, profitez du temps relativement calme pour effectuer un audit de (...)</p>
+                <div class="blog">
+                  <span class="text-secondary">Le 15/01/2022</span>
+                  <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col">
-            <img src="assets/images/img-blog-3.png" alt="Image-blog" srcset="">
-            <h4>Débugger un projet PHP Symfony en 2021</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#">En savoir plus</a></p>
+            <div class="card h-100">
+              <img src="assets/images/img-blog-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Comment réussir votre cahier des charges</h5>
+                <p class="card-text my-3">La rédaction de votre cahier des charges et une des étapes essentielles (...)</p>
+                <div class="blog">
+                  <span class="text-secondary">Le 15/01/2022</span>
+                  <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -286,10 +307,10 @@
     <!--End Bloc Article d'ACSEO -->
 
     <!--Bloc Idée/Projet -->
-    <div class="container text-center p-50">
-      <img src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
-      <h2>Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
-      <p><a href="#" class="pink-button">Contactez-nous</a></p>
+    <div class="container text-center">
+      <img class="d-bloc mt-5"src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
+      <h2 class="mt-3">Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
+      <p class="my-5"><a href="#" class="pink-button">Contactez-nous</a></p>
     </div>
     <!--End Bloc Idée/Projet -->
 
