--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="ACSEO est une agence web et mobile, propose de solutions numériques sur mesure">
     <meta name="keywords" content="html, css, javascript">
-    <link rel="stylesheet" href="../dist/assets/css/bootstrap.css">
-    <link rel="stylesheet" href="../dist/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../dist/assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="../dist/assets/css/style.css">
     <title>Page d'accueil ACSEO</title>
   </head>
   <body>
@@ -206,16 +208,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim  consequat.</p>
         <div class="row">
-          <div class="col">
-            <p>Témoignage à venir...</p>
+          <div class="carousel-slick-temoignages">
+            <div>your content</div>
+            <div>your content</div>
+            <div>your content</div>
           </div>
-          <div class="col">
-            <p>Témoignage à venir...</p>
-          </div>
-          <div class="col">
-            <p>Témoignage à venir...</p>
-          </div>
-        </div>
       </div>
     </section>
     <!--End Bloc Témoignages -->
@@ -365,8 +362,20 @@
     </div>
     <!--End of Footer-->
     
-  
-    <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="../node_modules/slick-carousel/slick/slick.min.js"></script>    
+    <script type="text/javascript" src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+    <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+
+      $(document).ready(function() {
+        $('.carousel-slick-temoignages').slick({
+          infinite: true,
+          slidesToShow: 1,
+          slidesToScroll: 1
+          });
+      });	
+    </script>
+
   </body>
 </html>
