--- a/src/index.html
+++ b/src/index.html
@@ -14,100 +14,100 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse hover-dropdown font-14 ml-auto bloc-menu-navigation" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Expertise
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Conseil en stratégie digitale</a></li>
-                  <li><a class="dropdown-item" href="#">Design & UX</a></li>
-                  <li><a class="dropdown-item" href="#">Développement web</a></li>
-                  <li><a class="dropdown-item" href="#">Application mobile</a></li>
-                  <li><a class="dropdown-item" href="#">E-commerce</a></li>
-                  <li><a class="dropdown-item" href="#">Innovation</a></li>
-                  <li><a class="dropdown-item" href="#">Carte de service</a></li>
-                  <li><a class="dropdown-item" href="#">Programme de Startup</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Technologies & CMS
-                </a>
-                <ul class="dropdown-menu">
-                  <div class="sous-menu-double">
-                    <div>
-                      <p><strong>Technologies</strong></p>
-                      <li><a class="dropdown-item" href="#">PHP / Symfony</a></li>
-                      <li><a class="dropdown-item" href="#">Vue / JS</a></li>
-                      <li><a class="dropdown-item" href="#">Angular</a></li>
-                      <li><a class="dropdown-item" href="#">Node JS</a></li>
-                      <li><a class="dropdown-item" href="#">React</a></li>
-                      <li><a class="dropdown-item" href="#">React Native</a></li>
-                    </div>
-                    <div>
-                      <p><strong>CMS</strong></p>
-                      <li><a class="dropdown-item" href="#">WordPress</a></li>
-                      <li><a class="dropdown-item" href="#">Sylius</a></li>
-                      <li><a class="dropdown-item" href="#">Shopify</a></li>
-                      <li><a class="dropdown-item" href="#">WooCommerce</a></li>
-                      <li><a class="dropdown-item" href="#">Prestashop</a></li>
-                    </div>
+        <a classgg="navbar-brand" href="#"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse hover-dropdown font-14 ml-auto bloc-menu-navigation" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Expertise
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Conseil en stratégie digitale</a></li>
+                <li><a class="dropdown-item" href="#">Design & UX</a></li>
+                <li><a class="dropdown-item" href="#">Développement web</a></li>
+                <li><a class="dropdown-item" href="#">Application mobile</a></li>
+                <li><a class="dropdown-item" href="#">E-commerce</a></li>
+                <li><a class="dropdown-item" href="#">Innovation</a></li>
+                <li><a class="dropdown-item" href="#">Carte de service</a></li>
+                <li><a class="dropdown-item" href="#">Programme de Startup</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Technologies & CMS
+              </a>
+              <ul class="dropdown-menu">
+                <div class="sous-menu-double">
+                  <div>
+                    <p><strong>Technologies</strong></p>
+                    <li><a class="dropdown-item" href="#">PHP / Symfony</a></li>
+                    <li><a class="dropdown-item" href="#">Vue / JS</a></li>
+                    <li><a class="dropdown-item" href="#">Angular</a></li>
+                    <li><a class="dropdown-item" href="#">Node JS</a></li>
+                    <li><a class="dropdown-item" href="#">React</a></li>
+                    <li><a class="dropdown-item" href="#">React Native</a></li>
                   </div>
-                 
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Réalisations
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Industrie</a></li>
-                  <li><a class="dropdown-item" href="#">Santé</a></li>
-                  <li><a class="dropdown-item" href="#">Médias</a></li>
-                  <li><a class="dropdown-item" href="#">Institutionnels</a></li>
-                  <li><a class="dropdown-item" href="#">IOT</a></li>
-                  <li><a class="dropdown-item" href="#">Start-ups</a></li>
-                  <li><a class="dropdown-item" href="#">E-commerce</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Agences
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Aix-en-Provence</a></li>
-                  <li><a class="dropdown-item" href="#">Montpellier</a></li>
-                  <li><a class="dropdown-item" href="#">Paris</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Équipe</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link pink-button btn-nav-contact" href="#">Contactez-nous</a>
-              </li>
-            </ul>
-          </div>
+                  <div>
+                    <p><strong>CMS</strong></p>
+                    <li><a class="dropdown-item" href="#">WordPress</a></li>
+                    <li><a class="dropdown-item" href="#">Sylius</a></li>
+                    <li><a class="dropdown-item" href="#">Shopify</a></li>
+                    <li><a class="dropdown-item" href="#">WooCommerce</a></li>
+                    <li><a class="dropdown-item" href="#">Prestashop</a></li>
+                  </div>
+                </div>
+                
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Réalisations
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Industrie</a></li>
+                <li><a class="dropdown-item" href="#">Santé</a></li>
+                <li><a class="dropdown-item" href="#">Médias</a></li>
+                <li><a class="dropdown-item" href="#">Institutionnels</a></li>
+                <li><a class="dropdown-item" href="#">IOT</a></li>
+                <li><a class="dropdown-item" href="#">Start-ups</a></li>
+                <li><a class="dropdown-item" href="#">E-commerce</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Agences
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Aix-en-Provence</a></li>
+                <li><a class="dropdown-item" href="#">Montpellier</a></li>
+                <li><a class="dropdown-item" href="#">Paris</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Équipe</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link pink-button btn-nav-contact" href="#">Contactez-nous</a>
+            </li>
+          </ul>
         </div>
       </nav>
+    </div>
+    <div class="container">
       <div class="row">
-        <div class="col-md-7">
+        <div class="col">
           <h1 class="blue-bar-title">PROJETS WEB <br /> ET MOBILES</h1>
           <p class="mb-30">Depuis 2009, nous concevons et réalisons des applications web et mobiles complexes à 
           forte valeur ajoutée, avec la conviction que les nouvelles technologies sont un facilitateur d'innovation.</p>
           <a href="#" class="btn pink-button">Contactez-nous</a>
         </div>
-        <div class="col-md-5">
+        <div class="col">
           <img src="assets/images/agence-web-acseo.png" alt="Techno utilisées">
         </div>
       </div>
@@ -177,29 +177,56 @@
     <!--End Bloc Nos Expertises -->
 
     <!--Bloc Nos Réalisations -->
-    <section>
-      <div class="container">
-        <h2 class="text-center mt-5 pt-5">Nos réalisations</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, .</p>
-      </div>
-      <div class="text-center">
-        <div class="row">
-          <div class="col">
-            <img src="assets/images/img-realisation1.png" alt="Logo Symfony" srcset="">
-          </div>
-          <div class="col">
-            <img src="assets/images/img-realisation2.png" alt="Logo React" srcset="">
-          </div>
-          <div class="col">
-            <img src="assets/images/img-realisation1.png" alt="Logo NodeJS" srcset="">
+    <div class="container">
+      <h2 class="text-center mt-5 pt-5">Nos réalisations</h2>
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, .</p>
+    </div>
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-md-3 g-4 my-5 bloc-realisation">
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/images/img-realisation1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text my-3"><img src="assets/images/logo tf1.png" alt="" srcset=""></p>
+              <h5 class="card-title text-white">JPP TV</h5>
+              <div class="blog">
+                <span class="text-white">Développement - Symfony</span>
+                <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
+              </div>
+            </div>
           </div>
         </div>
-        <p><a href="#" class="btn link-pink"><strong>Voir toutes les réalisations</strong></a></p>
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/images/img-realisation2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text my-3"><img src="assets/images/logo tf1.png" alt="" srcset=""></p>
+              <h5 class="card-title text-white">Site E-commerce</h5>
+              <div class="blog">
+                <span class="text-white">Développement - Symfony - E-commerce</span>
+                <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="assets/images/img-realisation1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text my-3"><img src="assets/images/logo tf1.png" alt="" srcset=""></p>
+              <h5 class="card-title text-white">Développement web</h5>
+              <div class="blog">
+                <span class="text-white">Développement - Front - Back-end</span>
+                <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
+      <p class="text-center"><a href="#" class="btn link-pink "><strong>Voir toutes les réalisations</strong></a></p>
+    </div>
     <!--End Bloc Nos Réalisations -->
-
 
     <!--Bloc Témoignages -->
     <section class="bg-body-tertiary">
@@ -207,49 +234,64 @@
         <h2 class="blue-bar-title mt-5 pt-5">Temoignages</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim  consequat.</p>
-        <div class="row">
-          <div class="carousel-slick-temoignages">
-            <div>your content</div>
-            <div>your content</div>
-            <div>your content</div>
+        <div class="row d-flex justify-content-center pb-5">
+          <div class="card col bloc-temoignages">
+            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
+              <p class="m-0"><strong>Martin DUPONT</strong></p>
+              <span class="text-secondary title-post">CEO | Onatera</span>
+            </div>
           </div>
-      </div>
+          <div class="card col bloc-temoignages mx-3">
+            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
+              <p class="m-0"><strong>Michèle MOREAU</strong></p>
+              <span class="text-secondary title-post">Product Owner | Travaux.com</span>
+            </div>
+          </div>
+          <div class="card col bloc-temoignages">
+            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
+              <p class="m-0"><strong>Sophie MARTIN</strong></p>
+              <span class="text-secondary title-post">Innovation Catalyst | Airbus</span>
+            </div>
+          </div>
+        </div>
     </section>
     <!--End Bloc Témoignages -->
 
-
     <!--Bloc Technologies -->
-    <section>
-      <div class="container ">
-        <h2 class="text-center mt-5 pt-5">Les meilleures technologies</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      </div>
-      <div class="logos-technos text-center my-5">
-        <div class="row">
-          <div class="col">
-            <img src="assets/images/symfony%201.png" alt="Logo Symfony" srcset="">
-            <p>Symfony</p>
-          </div>
-          <div class="col">
-            <img src="assets/images/react-blanc%201.png" alt="Logo React" srcset="">
-            <p>React & React Native</p>
-          </div>
-          <div class="col">
-            <img src="assets/images/nodejs-blanc%201.png" alt="Logo NodeJS" srcset="">
-            <p>NodeJs</p>
-          </div>
-          <div class="col">
-            <img src="assets/images/vue-blanc%201.png" alt="Logo VueJS" srcset="">
-            <p>VueJS</p>
-          </div>
+    <div class="container">
+      <h2 class="text-center mt-5 pt-5">Les meilleures technologies</h2>
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+      ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <div class="container-fluid logos-technos text-center my-5">
+      <div class="row">
+        <div class="col">
+          <img src="assets/images/symfony%201.png" alt="Logo Symfony" srcset="">
+          <p>Symfony</p>
         </div>
-        <p class="my-5 pb-5"><a href="#" class="btn link-pink"><strong>Voir toutes les technologies</strong></a></p>
+        <div class="col">
+          <img src="assets/images/react-blanc%201.png" alt="Logo React" srcset="">
+          <p>React & React Native</p>
+        </div>
+        <div class="col">
+          <img src="assets/images/nodejs-blanc%201.png" alt="Logo NodeJS" srcset="">
+          <p>NodeJs</p>
+        </div>
+        <div class="col">
+          <img src="assets/images/vue-blanc%201.png" alt="Logo VueJS" srcset="">
+          <p>VueJS</p>
+        </div>
       </div>
-    </section>
+      <p class="my-5 pb-5"><a href="#" class="btn link-pink"><strong>Voir toutes les technologies</strong></a></p>
+    </div>
     <!--End Bloc Technologies -->
-
 
     <!--Bloc Article de blog d'ACSEO -->
     <section class="bg-body-tertiary pb-5">
@@ -366,16 +408,5 @@
     <script type="text/javascript" src="../node_modules/slick-carousel/slick/slick.min.js"></script>    
     <script type="text/javascript" src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-
-      $(document).ready(function() {
-        $('.carousel-slick-temoignages').slick({
-          infinite: true,
-          slidesToShow: 1,
-          slidesToScroll: 1
-          });
-      });	
-    </script>
-
   </body>
 </html>
