add jquery-migrate and re-import slick-carousel scss

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg">
-        <a classgg="navbar-brand" href="#"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
+        <a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="Logo de ACSEO"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -405,8 +405,10 @@
     <!--End of Footer-->
     
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="../node_modules/slick-carousel/slick/slick.min.js"></script>    
     <script type="text/javascript" src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../node_modules/jquery-migrate/dist/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="../node_modules/slick-carousel/slick/slick.min.js"></script>
+    <script type="text/javascript" src="../dist/assets/js/carousel-slick.js"></script>
   </body>
 </html>
