--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
         <h2 class="blue-bar-title mt-5 pt-5">Temoignages</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Ut enim ad minim  consequat.</p>
-        <div class="row d-flex justify-content-center pb-5">
+        <div class="row d-flex justify-content-center pb-5 bloc-for-slick">
           <div class="card col bloc-temoignages">
             <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -259,6 +259,24 @@
               <span class="text-secondary title-post">Innovation Catalyst | Airbus</span>
             </div>
           </div>
+          <div class="card col bloc-temoignages">
+            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
+              <p class="m-0"><strong>Sophie MARTIN</strong></p>
+              <span class="text-secondary title-post">Innovation Catalyst | Airbus</span>
+            </div>
+          </div>
+          <div class="card col bloc-temoignages">
+            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
+              <p class="m-0"><strong>Sophie MARTIN</strong></p>
+              <span class="text-secondary title-post">Innovation Catalyst | Airbus</span>
+            </div>
+          </div>
+
+
         </div>
     </section>
     <!--End Bloc Témoignages -->
@@ -354,6 +372,17 @@
     <!--End Bloc Idée/Projet -->
 
 
+    <div class="row slick-c">
+      
+      <div class="col"><img src="assets/images/img-blog-3.png" class="card-img-top" alt="..."></div>
+      <div class="col"><img src="assets/images/img-blog-3.png" class="card-img-top" alt="..."></div>
+      <div class="col"><img src="assets/images/img-blog-3.png" class="card-img-top" alt="..."></div>
+      <div class="col"><img src="assets/images/img-blog-3.png" class="card-img-top" alt="..."></div>
+      <div class="col"><img src="assets/images/img-blog-3.png" class="card-img-top" alt="..."></div>
+      <div class="col"><img src="assets/images/img-blog-3.png" class="card-img-top" alt="..."></div>
+    </div>
+
+
     <!--Footer-->
     <footer>
       <div class="container">
@@ -404,6 +433,8 @@
     </div>
     <!--End of Footer-->
     
+
+    <!--********* JavaScript files ********-->
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
