--- a/src/blog.html
+++ b/src/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/style.css">
-    <title>Page d'accueil ACSEO</title>
+    <title>Page blog ACSEO</title>
   </head>
   <body>
     <div class="header-top bg-white">
