--- a/src/expertise.html
+++ b/src/expertise.html
@@ -48,12 +48,12 @@
         </nav>
       </div>
     </div>
-    <section class="for-expertise">
+    <section class="header-expertise">
       <div class="container">
         <div class="row">
           <div class="col">
-            <span class="pink">Expertises > UI/UX design</span>
-            <h1 class="text-white">Un design attractif, <br/>une expérience réussie :<br/><span class="blue"></span>notre expertise <br />UI/UX design</span></h1>
+            <p class="pink">Expertises > UI/UX design</p>
+            <h1><span class="white">Un design attractif, <br/>une expérience réussie :</span> <br/><span class="blue">notre expertise <br />UI/UX design</span></h1>
           </div>
           <div class="col header-img mt-2">
             <img src="assets/images/expertiseillu.png" alt="Techno utilisées">
@@ -62,51 +62,53 @@
       </div>
     </section>
 
-    <!--Bloc Nos Expertises -->
-    <div class="container">
+    <div class="container for-expertise">
       <div class="row my-5">
         <div class="col">
           <h2>Comment mettre votre utilisateur<br/>au centre de la création ?</h2>
-          <p class="text-justify">
-            Le design d’interaction est la manière dont le site va «communiquer» avec votre utilisateur final. L’objectif est que l’ensemble des visiteurs doivent comprendre, acheter, rentrer en communication simplement avec votre produit. C’est pour cela qu’ACSEO travaille avec une approche de «Design Thinking» qui met la technologie au service de l’utilisateur final et non le contraire.
-          </p>
+          <p class="mt-3">
+          Le design d’interaction est la manière dont le site va «communiquer» avec votre utilisateur final. L’objectif est que l’ensemble des visiteurs doivent comprendre, acheter, rentrer en communication simplement avec votre produit. </p> 
+          <p>C’est pour cela qu’ACSEO travaille avec une approche de «Design Thinking» qui met la technologie au service de l’utilisateur final et non le contraire.</p>
         </div>
         <div class="col">
           <img src="assets/images/expertise-1.png" alt="Photo expertise">
         </div>
       </div>
     </div>
-    <!--End Bloc Nos Expertises -->
 
-    <!--Bloc Nos Réalisations -->
-    <section>
+    <section class="section-expertise">
       <div class="container">
         <div class="row py-5">
-          <div class="col bloc-expertise">
+          <div class="col bloc-expertise bloc-cercle">
+            <span class="cercle"><img src="assets/images/Expertise/Frame.png" alt="" srcset=""></span>
             <h4>Audit UX</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             </p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
-          <div class="col bloc-expertise">
-            <h4>Audit UX</h4>
+          <div class="col bloc-expertise bloc-cercle">
+            <span class="cercle"><img src="assets/images/Expertise/icone.png" alt="" srcset=""></span>
+            <h4>UX Design</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             </p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
-          <div class="col bloc-expertise">
-            <h4>Audit UX</h4>
+          <div class="col bloc-expertise bloc-cercle">
+            <span class="cercle"><img src="assets/images/Expertise/icone (1).png" alt="" srcset=""></span>
+            <h4>UI Design</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             </p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
     </section>
-    <!--End Bloc Nos Réalisations -->
 
-    <div class="container text-center">
-      <h2 class="mt-3">Logiciels utilisés</h2>
+    <div class="container text-center my-5">
+      <h2 class="text-center mt-5 pt-5">Logiciels utilisés</h2>
       <div>
         <img class="m-3" src="assets/images/Expertise/figma.png" alt="Logo Figma">
         <img class="m-3" src="assets/images/Expertise/sketch.png" alt="Logo Sketch">
@@ -116,15 +118,13 @@
       </div>
     </div>
 
-    <!--Bloc Idée/Projet -->
-    <section class="bg-body-tertiary">
+    <section class="bg-body-tertiary last-container">
       <div class="container text-center">
         <img class="d-bloc mt-5"src="assets/images/hashtag.png" alt="Element hashtag" srcset="">
-        <h2>Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
-        <p class="m-0"><a href="#" class="pink-button">Contactez-nous</a></p>
+        <h2 class="mt-3">Une idée, un projet ? <br/> Nous sommes à votre disposition pour discuter</h2>
+        <p class="mt-5 mb-0 pb-5"><a href="#" class="pink-button text-white">Contactez-nous</a></p>
       </div>
     </section>
-    <!--End Bloc Idée/Projet -->
 
     <!--Footer-->
     <footer>
