--- a/src/contact.html
+++ b/src/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="../dist/assets/css/style.css">
-    <title>Page d'accueil ACSEO</title>
+    <title>Contact ACSEO</title>
   </head>
   <body>
     <div class="header-top bg-white">
@@ -50,253 +50,57 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col">
-          <h1 class="title-for-home">PROJETS WEB <br /><span class="btm-title">ET MOBILES</span></h1>
-          <p class="mb-5 history-acseo">Depuis 2009, nous concevons et réalisons des applications web et mobiles complexes à 
-          forte valeur ajoutée, avec la conviction que les nouvelles technologies sont un facilitateur d'innovation.</p>
-          <a href="#" class="btn pink-button text-center">Contactez-nous</a>
-        </div>
-        <div class="col header-img mt-5">
-          <img src="assets/images/illu-hashtag-header.png" alt="Techno utilisées">
-        </div>
-      </div>
-    </div>
-
-    <!--Bloc Nos Expertises -->
-    <section class="bg-body-tertiary ">
-      <div class="container text-center">
-        <h2 class="blue-bar-title mt-5 pt-5">Nos expertises</h2>
-        <p class="pb-5 description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-        ullamco labcommodo consequat.</p>
-        <div class="row my-5 row-cols-2-sm row-clos-4-lg">
-          <div class="col">
-            <img src="assets/images/illu.png" alt="Image-illu" srcset="">
-            <h4>Conseil stratégie digitale</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-          <div class="col">
-            <img src="assets/images/illu-ux.png" alt="Image-illu" srcset="">
-            <h4>UI/UX Design</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-          <div class="col">
-            <img src="assets/images/centre-de-service.png" alt="Image-illu" srcset="">
-            <h4>Centre de service</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-
-          <div class="col">
-            <img src="assets/images/app-mobile.png" alt="Image-illu" srcset="">
-            <h4>Application mobile</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-        </div>
-        <div class="row py-5 row-cols-2-sm row-clos-4-lg">
-          <div class="col">
-            <img src="assets/images/e-commerce.png" alt="Image-illu" srcset="">
-            <h4>E-commerce</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-          <div class="col">
-            <img src="assets/images/innovation.png" alt="Image-illu" srcset="">
-            <h4>Innovation</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-          <div class="col">
-            <img src="assets/images/dvt-web.png" alt="Image-illu" srcset="">
-            <h4>Développement web</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-
-          <div class="col">
-            <img src="assets/images/tma.png" alt="Image-illu" srcset="">
-            <h4>TMA</h4>
-            <p>Lorem ipsum dolor sti amet. consectelur adipisicng alit!</p>
-            <p><a href="#" class="link-pink">En savoir plus</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--End Bloc Nos Expertises -->
-
-    <!--Bloc Nos Réalisations -->
-    <div class="container">
-      <h2 class="text-center mt-5 pt-5">Nos réalisations</h2>
-      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, .</p>
-    </div>
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-md-3 g-4 my-5 bloc-realisation">
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/images/img-realisation1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text my-3"><img src="assets/images/logo tf1.png" alt="" srcset=""></p>
-              <h5 class="card-title text-white">JPP TV</h5>
-              <div class="blog">
-                <span class="text-white">Développement - Symfony</span>
-                <a href="#"><img src="assets/images/actif.png" alt="" srcset=""></a>
+        <div class="col-8">
+          <h1>Contact</h1>
+          <p>Construisons ensemble votre projet</p>
+          <form method="POST" action="#">
+            <div class="mb-3">
+              <label for="" class="form-label">Nom</label>
+              <input type="text" class="form-control" id="">
+            </div>
+            <div class="mb-3 bloc-tel-mail">
+              <div>
+                <label for="" class="form-label">Téléphone</label>
+                <input type="text" class="form-control" id="">
+              </div>
+              <div>
+                <label for="" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="">
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/images/img-realisation2.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text my-3"><img src="assets/images/logo tf1.png" alt="" srcset=""></p>
-              <h5 class="card-title text-white">Site E-commerce</h5>
-              <div class="blog">
-                <span class="text-white">Développement - Symfony - E-commerce</span>
-                <a href="#"><img src="assets/images/actif.png" alt="" srcset=""></a>
-              </div>
+            <div class="mb-3">
+              <label for="" class="form-label">Sujet de votre message</label>
+              <input type="text" class="form-control" id="">
             </div>
-          </div>
+            <div class="mb-3">
+              <label for="" class="form-label">Message</label><br>
+              <textarea name="" id="" cols="85" rows="10"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
+          </form>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/images/img-realisation1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text my-3"><img src="assets/images/logo tf1.png" alt="" srcset=""></p>
-              <h5 class="card-title text-white">Développement web</h5>
-              <div class="blog">
-                <span class="text-secondary">Le 15/01/2022</span>
-                <a href="#"><img src="assets/images/actif.png" alt="" srcset=""></a>
-              </div>
+        <div class="col-4">
+          <div>
+            <img src="assets/images/logo.png" alt="Logo ACSEO" srcset="">
+            <select class="form-select" aria-label="Default select example">
+              <option selected><strong>AIX-EN-PROVENCE</strong></option>
+              <option value="1">MONTPELLIER</option>
+              <option value="2">PARIS</option>
+            </select>
+            <h5>ADRESSE</h5>
+            <p>060 rue René Descartes <br/>13290 | Aix-en-Provence</p>
+            <h5>ADRESSE</h5>
+            <p>04 42 38 20 48</p>
+            <div>
+              <img src="assets/images/icones/facebook.png" alt="Icone Facebook" srcset="">
+              <img src="assets/images/icones/twitter.png" alt="Icone Twitter" srcset="">
+              <img src="assets/images/icones/linkedin.png" alt="Icone LinkedIn" srcset="">
+              <img src="assets/images/icones/mail.png" alt="Icone Email" srcset="">
             </div>
           </div>
         </div>
       </div>
-      <p class="text-center"><a href="#" class="btn link-pink "><strong>Voir toutes les réalisations</strong></a></p>
     </div>
-    <!--End Bloc Nos Réalisations -->
-
-    <!--Bloc Témoignages -->
-    <section class="bg-body-tertiary">
-      <div class="container text-center">
-        <h2 class="blue-bar-title mt-5 pt-5">Temoignages</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua. Ut enim ad minim  consequat.</p>
-        <div class="row d-flex justify-content-center pb-5 bloc-for-slick">
-          <div class="card col bloc-temoignages">
-            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
-              <p class="m-0"><strong>Martin DUPONT</strong></p>
-              <span class="text-secondary title-post">CEO | Onatera</span>
-            </div>
-          </div>
-          <div class="card col bloc-temoignages mx-3">
-            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
-              <p class="m-0"><strong>Michèle MOREAU</strong></p>
-              <span class="text-secondary title-post">Product Owner | Travaux.com</span>
-            </div>
-          </div>
-          <div class="card col bloc-temoignages">
-            <img src="assets/images/img-personne1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">“Lorem ipsum dolor sit amet, consectetur adipiscing elite et dolore magna aliqua.”</p>
-              <p class="m-0"><strong>Sophie MARTIN</strong></p>
-              <span class="text-secondary title-post">Innovation Catalyst | Airbus</span>
-            </div>
-          </div>
-
-          
-        </div>
-    </section>
-    <!--End Bloc Témoignages -->
-
-    <!--Bloc Technologies -->
-    <div class="container">
-      <h2 class="text-center mt-5 pt-5">Les meilleures technologies</h2>
-      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-      et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-      ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="container-fluid logos-technos text-center my-5">
-      <div class="row">
-        <div class="col">
-          <img src="assets/images/symfony%201.png" alt="Logo Symfony" srcset="">
-          <p>Symfony</p>
-        </div>
-        <div class="col">
-          <img src="assets/images/react-blanc%201.png" alt="Logo React" srcset="">
-          <p>React & React Native</p>
-        </div>
-        <div class="col">
-          <img class="nodejs-logo" src="assets/images/nodejs-blanc%201.png" alt="Logo NodeJS" srcset="">
-          <p>NodeJs</p>
-        </div>
-        <div class="col">
-          <img src="assets/images/vue-blanc%201.png" alt="Logo VueJS" srcset="">
-          <p>VueJS</p>
-        </div>
-      </div>
-      <p class="my-5 pb-5 my-2-md"><a href="#" class="btn link-pink"><strong>Voir toutes les technologies</strong></a></p>
-    </div>
-    <!--End Bloc Technologies -->
-
-    <!--Bloc Article de blog d'ACSEO -->
-    <section class="bg-body-tertiary pb-5">
-      <div class="container ">
-        <h2 class="text-center mt-5 pt-5">Le blog d'ACSEO</h2>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="row row-cols-1 row-cols-md-3 g-4 my-5">
-          <div class="col">
-            <div class="card h-100">
-              <img src="assets/images/img-bloc-1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title blog-title">Débugger un projet PHP Symfony en 2021</h5>
-                <p class="card-text my-3">Si debugger, c’est supprimer des bugs, alors programmer ne peut être (...)</p>
-                <div class="blog">
-                  <span class="text-secondary">Le 15/01/2022</span>
-                  <a href="#"><img src="assets/images/actif.png" alt="" srcset=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="assets/images/img-blog-2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title blog-title">ACSEO finalise l'Audit de 3 applications Symfony</h5>
-                <p class="card-text my-3">C'est l'été, profitez du temps relativement calme pour effectuer un audit de (...)</p>
-                <div class="blog">
-                  <span class="text-secondary">Le 15/01/2022</span>
-                  <a href="#"><img src="assets/images/actif.png" alt="" srcset=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="assets/images/img-blog-3.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title blog-title">Comment réussir votre cahier des charges</h5>
-                <p class="card-text my-3">La rédaction de votre cahier des charges et une des étapes essentielles (...)</p>
-                <div class="blog">
-                  <span class="text-secondary">Le 15/01/2022</span>
-                  <a href=""><img src="assets/images/actif.png" alt="" srcset=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--End Bloc Article d'ACSEO -->
 
     <!--Bloc Idée/Projet -->
     <div class="container text-center">
@@ -305,56 +109,6 @@
       <p class="my-5"><a href="#" class="pink-button">Contactez-nous</a></p>
     </div>
     <!--End Bloc Idée/Projet -->
-
-    <div class="container test-slick">
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      <div class="tem">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit repellat magni vitae odio illum reprehenderit labore quisquam officiis possimus odit!</p>
-        <h6>Martin DUPONT</h6>
-        <span>CEO | Onatera</span>
-      </div>
-      
-
-    </div>
 
     <!--Footer-->
     <footer>
